frontend/express/public/stylesheets/main.css
/* ... */
#eventOverviewWidgets .tooltip_templates{display:none;}
#eventOverviewWidgets .show-my-event-description{color:#cccccc; cursor:pointer; visibility:hidden; position:relative; top:-2px;}
#eventOverviewWidgets .cly-widget:hover .show-my-event-description{visibility:visible;}
#eventOverviewWidgets .empty_cell{ border-left:none; border-right:none; background-color:#F9F9F9; }
#eventOverviewContainer {padding: 0px 0px; border-radius: 0 0 2px 2px;}
#eventOverviewWidgets .cly-widget>table {width:100%;}
#eventOverviewWidgets .cly-widget>table td table td {padding: 0px;}

#event-overview-drawer .cly-select,#event-overview-drawer .cly-select .select-items {width:100%;}
#event-overview-drawer .adding-to-overview{ margin: 0;}
#event-overview-drawer .adding-to-overview:after {
    content: "";
    display: table;
    clear: both;
}
#event-overview-drawer .adding-to-overview>div  {float:left; width:38%; margin:0; padding:0;}
#event-overview-drawer .adding-to-overview>div:last-child {width: 24%;}
#event-overview-drawer .wrap-overview-item {padding: 0 4px 0 0 ;}
#add_to_overview{display:inline-block; text-align:center; float:none; margin-left: 0px; width: 75px;}
#event-overview-drawer .buttons{background-color:#ffffff;}
#events-overview-table table.events-table td:nth-child(2) { word-break: break-word; }
#events-overview-show-configure{float:right; margin-top:5px;}
.show-event-description:hover + .event-overview-description-wrapper .event-overview-description {border: 1px solid black; display:block}
#event-blueprint-nav-title {padding-top:4px;}
.events-empty-block{ max-width: 586px; margin: 75px auto 0 auto;}
.events-empty-block table{width:100%; table-layout:fixed}
.events-empty-block table td {padding: 0 25px 0 25px;}
.events-empty-block .events-empty-image {width:242px; height:242px;}
.events-empty-block .events-overview-noevents{ background-image:url('../images/dashboard/events-overview-noevents.svg');}
.events-empty-block .events-overview-configure{ background-image:url('../images/dashboard/events-overview-configure.svg');}
.events-empty-block .all-events-empty{ background-image:url('../images/dashboard/all-events-empty.svg');}
.events-empty-block p {color:#A2A2A2; font-size:14px; line-height:20px; }
.events-empty-block p.events-empty-title {margin-bottom:25px; font-size:18px; font-weight:400; color:#636363;}
/* EVENTS END */

#help-toggle { float:right; width:34px; height:18px; margin-top:4px; margin-right:16px; cursor:pointer; }
#help-toggle.active .on-off-switch-label { background-color: #2EB52B;}
#help-toggle.active .on-off-switch-label:before { background: #fff;}
#help-toggle .on-off-switch-label {background-color: #88858a; height: 18px;}
#help-toggle .on-off-switch-label::before {background: #e9e9e9;}
.percent-bar { height:11px; float:left; background-color:#AEE8B0; margin-right:4px; margin-top:2px; }

/* EXPORT */
#export-checkbox-container { padding:10px; padding-bottom:2px; overflow:auto; }
.export-checkbox { width:14%; float:left; margin-bottom:8px; font:16px Ubuntu,Helvetica,sans-serif; line-height:111%; color:#444; }
.export-description { font:15px Ubuntu,Helvetica,sans-serif; line-height:111%; color:#999; padding:10px; padding-bottom:5px; }
.stretch {}
#export-button { border: 1px solid #ccc; background-color: #f5f5f5; padding: 4px 10px; cursor: pointer; font-size: 11px; border-radius: 2px; }
#cly-export.dialog.export-dialog{display: none;}
.export-dialog {padding: 15px; width: 270px; overflow: visible; display: inline-block;}
.export-dialog .cly-select {width: 100%; margin:0px auto; box-sizing:border-box; margin-bottom: 10px; height:30px;}
.export-dialog .cly-select .select-items {width: 101%;}
.export-dialog p {margin:0px; font:14px Ubuntu,Helvetica,sans-serif; font-weight: bold; line-height:111%; margin-bottom: 10px;}
.export-dialog p.details {margin:0px; font:11px Ubuntu,Helvetica,sans-serif; color:#B7B6B6; margin-bottom: 10px;}
.export-dialog .export-data {width: 100%; margin:0px auto; padding-left:0px; padding-right:0px; text-align: center; height:30px;}
#export-type-selector {width: 100%; float: none; margin:0px auto;  margin-bottom: 10px; height:30px;}
#export-type-selector .button {width: 33%; text-align: center;}
/* EXPORT END */

.cly-button-group .icon-button { border-radius:0; margin:0; border-left:none; }
    .cly-button-group .icon-button:first-child, .cly-button-group .icon-button.first { border-radius:4px 0 0 4px; border-left: 1px solid #A5A5A5}
    .cly-button-group .icon-button.dark:first-child, .cly-button-group .icon-button.dark.first { border-left-color:#1B1B1B; }
    .cly-button-group .icon-button:last-child, .cly-button-group .icon-button.last { border-radius:0 4px 4px 0; }

.button-selector { font:13px Ubuntu,Helvetica,sans-serif; line-height:111%; color:#6B6B6B; padding:0;overflow:auto; user-select:none; }
.button-selector .button { cursor:pointer; user-select:none; background-color:#ececec; float:left; padding:7px; padding-top:6px; border:1px solid #D0D0D0; margin-left:-1px; }
.button-selector .button:nth-child(1),
.button-selector .button.first { margin-left:0; border-left:1px solid #D0D0D0; border-top-left-radius:2px; border-bottom-left-radius:2px; }
.button-selector .button:last-child,
.button-selector .button.last { border-top-right-radius:2px; border-bottom-right-radius:2px; border-right:1px solid #D0D0D0; }
.button-selector .button:hover { background-color:#F9F9F9; }
.button-selector .button:active  { background-color:#F9F9F9; }
.button-selector .button.active { background-color:#F9F9F9; }
.button-selector .button.disabled { opacity:0.3; cursor:default; }
.button-selector .button.icon { padding:5px; line-height: 12px; width: 18px; text-align: center; }
.button-selector .button.icon i.material-icons { font-size: 16px; }
.button-selector .button.icon span.ion-icons { font-size: 17px; }
.button-selector .button.icon i.fa { font-size: 18px; line-height: 14px; padding-bottom: 3px; }
/* ... */

